tests/NormalTests/paczka1/fuzzy1/54333352.err
Error in line 3: PfGYM S225 25,6
Error in line 7: PfGYM A657 55,3
Error in line 10: fYJl A876 87,96
Error in line 13: nJjU5h8TZuV S225 16,0
Error in line 14: I9iqr24 A724 14,7
